feat(rasterize): caching policy based on cache control max age
