# openapi3.yaml
@@ -35,31 +35,12 @@ paths:
           schema:
             $ref: '#/components/schemas/tilePosition'
           description: y axis tile
-        - in: header
-          name: If-Modified-Since
-          required: false
-          schema:
-            type: string
-        - in: header
-          name: Cache-Control
-          required: false
-          schema:
-            type: string
       responses:
         200:
           description: the requested rasterized image
           headers:
-            Last-Modified:
-              $ref: '#/components/headers/last-modified'
-          content:
-            image/png:
-              schema:
-                $ref: '#/components/schemas/image'
-        304:
-          description: the previously cached requested rasterized image
-          headers:
-            Last-Modified:
-              $ref: '#/components/headers/last-modified'
+            Cache-Control:
+              $ref: '#/components/headers/cache-control'
           content:
             image/png:
               schema:
@@ -111,7 +92,7 @@ components:
           type: number
           format: int32
   headers:
-    last-modified:
+    cache-control:
       schema:
         type: string
-      description: The last modified timestamp, used for caching
+      description: The browser caching policy
